// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render highlighted suggestion component 1`] = `
<div>
  <div
    class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root MuiMenuItem-selected"
    role="menuitem"
    tabindex="-1"
  >
    <div>
      <span
        class="highlighted"
      >
        Te
      </span>
      <strong
        class="notHighlighted"
      >
        st
      </strong>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </div>
</div>
`;

exports[`render suggestion component 1`] = `
<div>
  <div
    class="MuiButtonBase-root MuiListItem-root MuiListItem-default MuiListItem-gutters MuiListItem-button MuiMenuItem-root"
    role="menuitem"
    tabindex="-1"
  >
    <div>
      <span
        class="highlighted"
      >
        Te
      </span>
      <strong
        class="notHighlighted"
      >
        st
      </strong>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </div>
</div>
`;
